5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4144/executions/1637_1053.log
== TEST (2019-04-09 10:27:07) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = (input("digite o patrono: ")
if (patrono.lower() == "cervo"):
	men = "eh patrono do Harry Potter."
else: 
	men = "nao eh patrono do harry potter"
print(patrono,men)
-- ERROR:
File "XXXX", line 5
    if (patrono.lower() == "cervo"):
                                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:27:25) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = (input("digite o patrono: "))
if (patrono.lower() == "cervo"):
	men = "eh patrono do Harry Potter."
else: 
	men = "nao eh patrono do harry potter"
print(patrono,men)
-- OUTPUT:
cervo eh patrono do Harry Potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:27:38) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = (input("digite o patrono: "))
if (patrono.lower() == "cervo"):
	men = "eh patrono do Harry Potter."
else: 
	men = "nao eh patrono do harry potter"
print(patrono,men)
-- OUTPUT:
cervo eh patrono do Harry Potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:27:48) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = (input("digite o patrono: "))
if (patrono.lower() == "cervo"):
	men = "eh patrono do Harry Potter."
else: 
	men = "nao eh patrono do harry potter"
print(patrono,men)
-- EXECUTION TIME:
0.229893
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter.
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do harry potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:27:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = (input("digite o patrono: "))
if (patrono.lower() == "cervo"):
	men = "eh patrono do Harry Potter."
else: 
	men = "nao eh patrono do harry potter"
print(patrono,men)
-- OUTPUT:
cervo eh patrono do Harry Potter.
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 10:28:36) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("digite o patrono: ")
if (patrono.lower() == "cervo"):
	men = "eh patrono do Harry Potter"
else: 
	men = "nao eh patrono do Harry Potter"
print(patrono,men)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 10:28:50) 
-- CODE:
# Teste seu código aos poucos.
# Não teste tudo no final, pois fica mais difícil de identificar erros.
# Use as mensagens de erro para corrigir seu código.
patrono = input("digite o patrono: ")
if (patrono.lower() == "cervo"):
	men = "eh patrono do Harry Potter"
else: 
	men = "nao eh patrono do Harry Potter"
print(patrono,men)
-- EXECUTION TIME:
0.170733
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
